maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: ';' expected but double literal found.
  direction = random.3()
                    ^RandomMouseMaze:5: error: '=' expected but 'match' found.
    var direction match{
                  ^RandomMouseMaze:9: error: illegal start of simple expression
  }
  ^