maze.lessons.maze.randommouse.RandomMouseMaze.scala.code
override def run() {
  while (!estSurBiscuit){
  direction = random.3()
    var direction match{
    case 0 => if (!estFaceMur){avance()}
    case 1 => droite()
    case 2 => recule()}
  }
}